# PathOpimization

./: .gitignore  CMakeLists.txt
include/: adaptive_segmentation.hpp  astar.hpp  grid.hpp  optimizer.hpp  polygon_corridor.hpp  polynomial.hpp  visualize.hpp
src/: adaptive_segmentation.cpp  astar.cpp  grid.cpp  main.cpp  optimizer.cpp  polygon_corridor.cpp  visualize.cpp
